--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
         
-        <input type="button" id="join" value="join">
-        <input type="text" id="name" value="unnamed">
+        <input right="10px" type="button" id="join" value="join">
+        <input right="10px" type="text" id="name" value="unnamed">
 
 
 <script type="importmap">
