--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="games/engine/test.html">game engine test</a>
             </li>
+            <li>
+                <a href="stuff/procedural_stuff/gpunoise.html">epilepsy</a>
+            </li>
         </ul>
         </div>
 
@@ -202,7 +205,7 @@
             }, { passive: false });
             //hide scrollbars
             document.body.style.overflow = 'hidden';
-            
+
     
 
 
