--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
         
-        <input right="10px" type="button" id="join" value="join">
-        <input right="10px" type="text" id="name" value="unnamed">
+        <input position="relative" type="button" id="join" value="join">
+        <input position="relative" type="text" id="name" value="unnamed">
 
 
 <script type="importmap">
