--- a/stuff/procedural_stuff/gpunoise.html
+++ b/stuff/procedural_stuff/gpunoise.html
@@ -1,7 +1,8 @@
 <html>
     <head>
     <script src="dist/gpu-browser.js"></script>
-    </head>
+    <script src="../title.js"></script>
+</head>
     <body>
         <!--<canvas id="map" width="800" height="600"></canvas>
         -->
