--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
         
+        
+        <div style="position: absolute; top:0; left:0; margin: 10px;"></div>
         <input position="relative" type="button" id="join" value="join">
         <input position="relative" type="text" id="name" value="unnamed">
-
+        </div> 
 
 <script type="importmap">
 {
