--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="stuff/turtles.html">amogus simulator</a>
             </li>
             <li>
-                <a href="stuff/cursor.html">bubble wrap simulator</a>
+                <a href="stuff/cursor.html">mm bubbles</a>
             </li>
             <li>
                 <a href="games/engine/test.html">game engine test</a>
