--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         
         
         <div style="position: absolute; top:0; left:0; margin: 10px;"></div>
-        <input position="relative" type="button" id="join" value="join">
-        <input position="relative" type="text" id="name" value="unnamed">
+        <input type="button" id="join" value="join">
+        <input type="text" id="name" value="unnamed">
         </div> 
 
 <script type="importmap">
