--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
         
         
-        <div style="position: absolute; top:0; left:0; margin: 10px;"></div>
+        <div style="position: absolute; top:0; left:0; margin: 10px;">
         <input type="button" id="join" value="join">
         <input type="text" id="name" value="unnamed">
         </div> 
