--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         
         <div style="position: absolute; top:6px; left:6px; margin: 10px;">
-        <input type="button" id="join" value="join">
+        <input type="button" id="join" value="rename">
         <input type="text" id="name" value="unnamed">
         </div> 
 
