--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="stuff/procedural_stuff/gpunoise.html">epilepsy</a>
             </li>
+            <li>
+                <a href="stuff/procedural_stuff/mandelbrot.html">mandelbrot</a>
+            </li>
         </ul>
         </div>
 
