--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <li>
                 <a href="stuff/procedural_stuff/mandelbrot.html">mandelbrot</a>
             </li>
+            <li>
+                <a href="stuff/procedural_stuff/tree.html">tree</a>
         </ul>
         </div>
 
