--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             </li>
             <li>
                 <a href="stuff/procedural_stuff/tree.html">tree</a>
-        </ul>
+            </ul>
+            <li>
+                <a href="stuff/procedural_stuff/cellular_automata.html">cgol</a>
+            </li>
+
         </div>
 
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
