--- a/stuff/procedural_stuff/gpu_cgol.html
+++ b/stuff/procedural_stuff/gpu_cgol.html
@@ -254,6 +254,7 @@
 
             //for mobile devices handle zoom and pan with touch events
             canvas.addEventListener('touchstart', function (e) {
+                e.preventDefault();
                 if (e.touches.length == 2) {
                     let dx = e.touches[0].clientX - e.touches[1].clientX;
                     let dy = e.touches[0].clientY - e.touches[1].clientY;
@@ -264,6 +265,7 @@
                 }
             });
             canvas.addEventListener('touchmove', function (e) {
+                e.preventDefault();
                 if (e.touches.length == 2) {
                     let dx = e.touches[0].clientX - e.touches[1].clientX;
                     let dy = e.touches[0].clientY - e.touches[1].clientY;
