--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -5,7 +5,8 @@
 
     <body>
         <canvas id="canvas" width="600" height="600" style="border: 1px solid red; background-color: aliceblue;"></canvas>
-        
+        <button id="mutate" onclick="sim.mutate(0.1)">Mutate</button>
+        <button id="evolve" onclick="sim.evolve()">next generation</button>
     </body>
 
 
