--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -189,7 +189,7 @@
                     for (let j = 0; j < this.layerShape[i]; j++) {
                         for (let k = 0; k < this.layerShape[i + 1]; k++) {
                             //weight array is of shape [layer][node][next node]
-                            values[i + 1][k] += values[i][j] * this.weights[i][j][k];
+                            values[i + 1][k] += activation(values[i][j] * this.weights[i][j][k]);
                         }
                     }
                 }
@@ -206,8 +206,12 @@
                 
                 for(let layer = 0; layer < this.layerShape.length; layer++) {
                 for(let i = 0; i < this.layerShape[layer]; i++){
-                    let drawX = circleRadius+layer*width/this.layerShape.length;
-                    let drawY = circleRadius+i * height / this.layerShape[layer];
+                    let drawX = 0;
+                    let drawY = 0;
+                    if(layer > 0){
+                    drawX = circleRadius+layer*width/this.layerShape.length;
+                    drawY = circleRadius+i * height / this.layerShape[layer];
+                    }
                     ctx.fillStyle = "green";
                     ctx.beginPath();
                     ctx.arc(drawX,drawY, circleRadius, 0, 2 * Math.PI);
@@ -243,7 +247,7 @@
 
         }
 
-        let sim = new Simulation(50);
+        let sim = new Simulation(35);
         let inspectedFish = 0;
         function loop(){
             sim.update();
@@ -274,6 +278,9 @@
             }
         });
 
+        function activation(x) {
+            return (Math.tanh(x));
+        }
 
 
     </script>
