--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -39,7 +39,7 @@
                 for (let i = 0; i < channels; i++) {
                     intensities[i]=0;
                 }
-                //offset angle by fish.angle
+                /*
                 for (let i = 0; i < this.fishes.length; i++) {
                     let otherFish = this.fishes[i];
                     if(otherFish == fish) continue;
@@ -50,6 +50,25 @@
                     let distance = Math.sqrt((otherFish.x - fish.x) ** 2 + (otherFish.y - fish.y) ** 2);
                     intensities[channel] += 1 / distance;
                 }
+                */
+                //consider fish around the wrap around
+                for (let i = 0; i < this.fishes.length; i++) {
+                    let otherFish = this.fishes[i];
+                    if(otherFish == fish) continue;
+                    let angle = Math.atan2(otherFish.y - fish.y, otherFish.x - fish.x) - fish.angle;
+                    if(angle < 0) angle += 2 * Math.PI;
+                    let channel = Math.floor(angle / (2 * Math.PI / channels));
+                    if(channel >= channels) continue;
+                    let distance = Math.sqrt((otherFish.x - fish.x) ** 2 + (otherFish.y - fish.y) ** 2);
+                    if(otherFish.x < fish.x - this.width / 2) distance = Math.sqrt((otherFish.x + this.width - fish.x) ** 2 + (otherFish.y - fish.y) ** 2);
+                    if(otherFish.x > fish.x + this.width / 2) distance = Math.sqrt((otherFish.x - this.width - fish.x) ** 2 + (otherFish.y - fish.y) ** 2);
+                    if(otherFish.y < fish.y - this.height / 2) distance = Math.sqrt((otherFish.x - fish.x) ** 2 + (otherFish.y + this.height - fish.y) ** 2);
+                    if(otherFish.y > fish.y + this.height / 2) distance = Math.sqrt((otherFish.x - fish.x) ** 2 + (otherFish.y - this.height - fish.y) ** 2);
+                    intensities[channel] += 1 / distance;
+                }
+                
+                //if(distance > 80) continue;
+
                 if(intensities.length != channels) {console.log(intensities);};
                 
                 return intensities;
