--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -9,6 +9,7 @@
         <canvas id="inspect" width="400" height="400" style="border: 1px solid black; background-color: aliceblue;"></canvas>
         <button id="mutate" onclick="sim.mutate(0.1)">Mutate</button>
         <button id="evolve" onclick="sim.evolve()">next generation</button>
+        
         </br>
         </br>
         <button id="save" onclick="saveAllWeights()">save</button>
@@ -144,12 +145,17 @@
                 this.angle += output[0] * this.turnSpeed;
                 this.x += Math.cos(this.angle) * (this.speed*output[1]);
                 this.y += Math.sin(this.angle) * (this.speed*output[1]);
-                //if distance to nearest fish is greater or lower than 3*size, subtract from score
-                let minDistance = Math.min(this.world.fishes.map(fish => Math.sqrt((fish.x - this.x) ** 2 + (fish.y - this.y) ** 2)));
-                //size/2 wiggle room is okay, after that slowly subtract from score
-                if(minDistance > 3 * this.size) this.score -= (minDistance - 3 * this.size) / 10;
-                else if(minDistance < 1.5 * this.size) this.score -= (1.5 * this.size - minDistance) / 10;
-                else this.score += 1;
+                let minDistance = Infinity;
+                for(let i = 0; i < this.world.fishes.length; i++) {
+                    let otherFish = this.world.fishes[i];
+                    if(otherFish == this) continue;
+                    let distance = Math.sqrt((otherFish.x - this.x) ** 2 + (otherFish.y - this.y) ** 2);
+                    if(distance < minDistance) minDistance = distance;
+                }
+
+                if(minDistance > 4 * this.size) {this.score -=3;}
+                if (minDistance < 3 * this.size) {this.score -=4;}
+                if (minDistance < 1*this.size) {this.score -=90;}
 
             }
             pair(other){
@@ -281,7 +287,10 @@
             ctx.beginPath();
             ctx.rect(sim.fishes[inspectedFish].x - sim.fishes[inspectedFish].size, sim.fishes[inspectedFish].y - sim.fishes[inspectedFish].size, sim.fishes[inspectedFish].size * 2, sim.fishes[inspectedFish].size * 2);
             ctx.stroke();
-
+            //on the inspect canvas bottom right, print the fish's score
+            inspectCtx.fillStyle = "black";
+            inspectCtx.font = "15px Arial";
+            inspectCtx.fillText("fitness: "+sim.fishes[inspectedFish].score, inspectCanvas.width*0.76, inspectCanvas.height*0.95);
             requestAnimationFrame(loop);
 
         }
