--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -401,6 +401,8 @@
 
         setInterval(() => {
             sim.update();
+            sim.update();
+            sim.update();
         }, 1);
     
         canvas.addEventListener("click", e => {
