--- a/stuff/genetic_fish.html
+++ b/stuff/genetic_fish.html
@@ -221,7 +221,7 @@
             constructor() {
                 this.inputSize = 8;
                 this.outputSize = 2;
-                this.layerShape = [this.inputSize, this.outputSize];
+                this.layerShape = [this.inputSize,9,5,this.outputSize];
                 //count total number of nodes
                 
                 //all values from previous layer are multiplied by weights of their connections and added to all values of the next layer
@@ -443,7 +443,7 @@
             document.getElementById("evolve").innerHTML = "next generation ("+generation+")";
             sim.evolve();
 
-        }, 5000);
+        }, 15000);
 
 
     </script>
